--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@iconify/json": "^2.2.349",
+		"@iconify/tailwind4": "^1.0.6",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -33,5 +35,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"d3": "^7.9.0"
 	}
 }
