--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@eslint/js": "^9.18.0",
 		"@iconify/json": "^2.2.349",
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-cloudflare": "^7.1.1",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
