Add leaflet and refactor data visualization sections
The changes reorganize the data visualization UI components and add the
leaflet mapping library. The main changes include:

- Add leaflet package for mapping functionality - Switch from accordions
to drawers for options UI - Improve scrolling behavior with GSAP
animations - Add new geo section component - Center and constrain
section width for better layout

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"flowbite-svelte": "^1.10.16",
 		"flowbite-svelte-icons": "^2.2.1",
 		"globals": "^16.0.0",
+		"leaflet": "^1.9.4",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
